src/components/Hero/Hero.module.css
@import "../../vars.css";

.container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 49px;
    z-index: 1;
    margin-left: 10%;
    margin-right: 10%;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    color: var(--color-text);
    z-index: 1;
}

.title {
    font-size: 72px;
    font-weight: 900;
    margin-bottom: 33px;
    font-family: var(--font-roboto);
    background: linear-gradient(
        90deg,
        rgba(255, 255, 255, 1) 70%,
        rgba(255, 255, 255) 120%
    );
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
}

.description {
    font-size: 30px;
    font-family: var(--font-roboto);
    margin-bottom: 52px;
}

.contactBtn {
    text-decoration: none;
    background-color: var(--color-primary);
    color: var(--color-text);
    border-radius: 100px;
    font-size: 30px;
    font-weight: 600;
    padding: 17px 26px;
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
}

.heroImg {
    width: 50%;
    z-index: 1;

    animation-name: floating;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;

}

@keyframes floating {
    0% {
        transform: translate(0, 0px);
    }
    50% {
        transform: translate(0, 10px);
    }
    100% {
        transform: translate(0, -0px);
    }
}

.topBlur {
    position: absolute;
    width: 50vh;
    height: 50vh;
    min-width: 350px;
    min-height: 350px;
    top: -128px;
    left: -10vw;
    border-radius: 764px;
    background: rgba(25, 55, 109, 0.7);
    filter: blur(100px);
    z-index: 0;
}

.bottomBlur {
    position: absolute;
    width: 70vh;
    height: 50vh;
    min-width: 250px;
    min-height: 350px;
    top: 246px;
    right: -25vw;
    border-right: 764px;
    background: rgba(25, 55, 109, 0.7);
    filter: blur(100px);
    z-index: 0;
}

@media screen and (max-width: 830px) {
    .container {
        flex-direction: column-reverse;
    }

    .content {
        align-items: center;
    }
}

